tests/errors/syn4.kt
fun main() {
    println "Hello, World!" // Missing parentheses in function call
}